fdo#74357 DOCX import: fix nested tables anchored inside tables

Regression from bbef85c157169efa958ea1014d91d467cb243e6f (bnc#779620
DOCX import: try harder to convert floating tables to text frames,
2013-10-01), the conversion of nested tables is delayed by default till
we know the page size. However, in case the anchor is in a table, we
should convert it right away, because the conversion of the parent table
would invalidate our XTextRange references.

Change-Id: Id41556e721c6e1c7239e4ea25abd57c999d2219b